fixed restart functions, added backgorund image and some styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
 .spots {
   display: inline;
 }
+
+body {
+  background-image: url('../images/white-pizza-box.jpg');
+  text-align: center;
+  padding: 75px;
+  font-family: Impact, Charcoal, sans-serif;
+  font-size: 24px;
+}
